manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-ticker
  namespace: stock-ticker
  labels:
    app.kubernetes.io/instance: stock-ticker
spec:
  selector:
    app.kubernetes.io/instance: stock-ticker
  ports:
    - name: http
      port: 3000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: stock-ticker
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  type: ClusterIP
